--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="shortcut icon" href="favicon.ico">
+  	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
+
+
+  	<!-- Bootstrap  -->
+  	<link rel="stylesheet" href="css/bootstrap.css">
+  	<!-- Theme style  -->
+  	<link rel="stylesheet" href="css/style1.css">
+
+
+
+
+
   </head>
   <body>
     <div id="page-wrap">
@@ -22,6 +36,94 @@
           <a href="reg.html" title="Регистрация" id="reg">Регистрация</a>
         </center>
       </header>
+      <div id="fh5co-header" style="background-image: url(img/polygon.png);" data-stellar-background-ratio="0.5">
+    		<div class="overlay"></div>
+    		<div class="bio-photo text-center">
+    			<a href="index.html"><img src="img/person_2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+    		</div>
+    	</div>
+    	<div id="fh5co-main">
+    		<div class="fh5co-section">
+    			<div class="container">
+    				<div class="row">
+    					<div class="col-md-4 col-sm-4 col-xs-12 section-heading">
+    						<h2>01. About Me</h2>
+    					</div>
+    					<div class="col-md-8 col-sm-8 col-xs-12">
+    						<div class="row">
+    							<div class="col-md-12">
+    							<p>Hello I'm <strong>Ignat Kashenko</strong>, Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit. Placeat magni quae aliquid pariatur, nesciunt. Quo porro, vero illum temporibus possimus quidem quibusdam libero at minima, illo hic non consequatur? <a href="#">Laudantium</a> rerum  ratione veniam, ex voluptatum molestiae fuga doloremque odio, voluptates iure, ut aliquid hic dicta eveniet. Suscipit dolorem est voluptate iusto repudiandae laudantium pariatur in explicabo aperiam beatae ipsa recusandae fugiat placeat corporis, sequi, assumenda illo illum voluptas eveniet dolore quibusdam, nemo enim inventore aut quod? Recusandae.</p>
+    							<p>Repellendus aut cupiditate ullam reiciendis nemo optio, cumque, eos quis distinctio at dolores, dignissimos et <a href="#">necessitatibus</a> reprehenderit sapiente, porro ipsam expedita! Illo ipsum non tenetur beatae inventore sed atque, necessitatibus hic, neque reprehenderit voluptate eaque dicta ducimus voluptates error accusantium fugiat maxime quaerat consequuntur suscipit nisi odit veniam minus quae eius! Impedit voluptas aperiam cum nostrum animi facilis pariatur dolorum modi, quaerat amet, fugiat nisi ipsa sint tempore vitae ex laborum, est ad sapiente iste ducimus sed?</p>
+
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+
+    		<!-- END .fh5co-section -->
+
+
+    		<div class="fh5co-section">
+    			<div class="container">
+    				<div class="row">
+    					<div class="col-md-4 col-sm-4 col-xs-12 section-heading">
+    						<h2>02. Contact</h2>
+    					</div>
+    					<div class="col-md-8 col-sm-8 col-xs-12">
+    						<div class="col-md-12">
+    							<form action="#">
+    								<div class="form-group">
+    									<div class="row">
+    										<div class="col-md-6">
+    											<input type="text" class="form-control" placeholder="First Name">
+    										</div>
+    										<div class="col-md-6">
+    											<input type="text" class="form-control" placeholder="Last Name">
+    										</div>
+    									</div>
+    								</div>
+
+    								<div class="form-group">
+    									<div class="row">
+    										<div class="col-md-12">
+    											<input type="email" class="form-control" placeholder="Email">
+    										</div>
+    									</div>
+    								</div>
+
+    								<div class="form-group">
+    									<div class="row">
+    										<div class="col-md-12">
+    											<textarea name="email" id="email" cols="30" class="form-control" rows="10" placeholder="Message"></textarea>
+    										</div>
+    									</div>
+    								</div>
+
+    								<div class="form-group">
+    									<div class="row">
+    										<div class="col-md-6">
+    											<input type="submit" class="btn btn-primary btn-outline btn-lg btn-block" value="Submit">
+    										</div>
+    									</div>
+    								</div>
+
+    							</form>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+
+
+
+
+
+
+
+
+
+
 
       <footer>
       <span class="left">Все права защищены &copy; 2019</span><span
