--- a/article.html
+++ b/article.html
@@ -24,19 +24,20 @@
       </header>
     <div class="clear"><br /></div>
 <div id="wrapper">
-  <div id="articles">
        <div id="about_us">
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-  </div>
-  <div id="columRight">
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-        <p>Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!! Здесь находится вступительный текст!!! Ура!!!</p>
-     </div>
-   </div>
+         <div>
+         <article>
+            <h2>Grebz "По ремонту"</h2>
+            <p>Ещё один бэнгер!</p>
+            <img src="img/grebz.jpg" alt="Изображение"  />
+            <p>Группа "Грибы", спустя неделю после выхода сингла "Контракты", вернулась с новым не менее взрывным треком "По ремонту".
+              Заметим, что чуть ранее 4atty aka Tilla и Симптом НЖН представили на эту песню яркий видеоклип.
+              Вдобавок данная композиция должна попасть в новый альбом группы, премьера которого, вероятно, состоится уже на следующей неделе.
+            <br><br>Буквально на днях у Grebz выходил клип "Контракты".</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/12d0WJ28M0k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </article>
+        </div>
+      </div>
 </div>
 <footer>
 <span class="left">Все права защищены &copy; 2019</span><span
