--- a/news.html
+++ b/news.html
@@ -22,38 +22,39 @@
           <a href="reg.html" title="Регистрация" id="reg">Регистрация</a>
         </center>
       </header>
-    <div class="clear"><br /></div>
-    <div class="clear">
-    <div id="main_soc_block">
-    <center>
-        <div id="main_soc_block_in">
-           <h3>Регистрируйтесь на сайте</h3>
-           <p>Только у нас лучшие товары, бла, бла, бла...</p>
-           <a href="reg.html" title="Регистрируйтесь">Регистрируйтесь</a>
-        </div>
-        </center>
-    </div>
-    </div>
     <div id="wrapper">
       <div id="articles">
+        <article>
+            <img src="img/grebz.jpg" alt="Изображение" />
+            <h2>Grebz "По ремонту"</h2>
+            <p>Ещё один бэнгер!</p>
+            <a href="article.html" title="Посмотреть статью">Читать далее</a>
+        </article>
          <article>
-               <img src="img/4.jpg" alt="Изображение" title="Изображение" />
-               <h2>Заголовок</h2>
-               <p>Здесь находится вступительный текст!!! Ура!!!</p>
-               <a href="article.html" title="Посмотреть статью">Читать далее</a>
+            <img src="img/scrip.jpg" alt="Изображение" />
+            <h2>Gruppa Skryptonite & 104 & T-Fest "3x3"<h2>
+            <pre>Совместный хит!</pre>
+            <a href="article1.html" title="Посмотреть статью">Читать далее</a>
+         </article>
+         <article>
+           <img src="img/grebzz.png" alt="Изображение" />
+           <h2>Grebz "Контракты"</h2>
+           <p>Камбек года?</p>
+           <a href="article2.html" title="Посмотреть статью">Читать далее</a>
            </article>
-           <article>
-               <img src="img/1.jpg" alt="Изображение" title="Изображение" />
-               <h2>Заголовок</h2>
-               <p>Здесь находится вступительный текст!!! Ура!!!</p>
-               <a href="article.html" title="Посмотреть статью">Читать далее</a>
-           </article>
-           <article>
-               <img src="img/2.jpg" alt="Изображение" title="Изображение" />
-               <h2>Заголовок</h2>
-               <p>Здесь находится вступительный текст!!! Ура!!!</p>
-               <a href="article.html" title="Посмотреть статью">Читать далее</a>
-           </article>
+        </div>
+        <div class="clear">
+        <div id="main_soc_block">
+        <center>
+            <div id="main_soc_block_in">
+              <center>
+               <h3>Заходи почаще, бро)</h3>
+               <br>
+               <p>Здесь только самые свежие и топовые новости!</p>
+               <a href="reg.html" title="Регистрируйтесь">Регистрируйтесь</a>
+             </center> 
+            </div>
+            </center>
         </div>
         <div id="articles">
            <article>
