--- a/index.html
+++ b/index.html
@@ -5,23 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="keywords" content="test, site, website" />
     <meta name="description" content="Ignata Kashchenko Website" />
-
     <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="shortcut icon" href="favicon.ico">
   	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-
-
-
-  	<!-- Bootstrap  -->
   	<link rel="stylesheet" href="css/bootstrap.css">
-  	<!-- Theme style  -->
   	<link rel="stylesheet" href="css/style1.css">
-
-
-
-
-
   </head>
   <body>
     <div id="page-wrap">
@@ -31,7 +20,7 @@
           <a href="index.html" title="На главную" id="logo">Kashenko team</a>
           <a href="news.html" title="Новости" id="news">Новости</a>
           <a href="about.html" title="О нас" id="about">Развлечения</a>
-          <a href="feedback.html" title="Обратная связь" id="feedback">Обратная связь</a>
+          <a href="feedback.php" title="Обратная связь" id="feedback">Обратная связь</a>
           <a href="auth.html" title="Вход" id="auth">Вход</a>
           <a href="reg.html" title="Регистрация" id="reg">Регистрация</a>
         </center>
